[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Actors/kaktus/kaktus.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/shadow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemies/kaktus.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.1233, 23.9811 )

[sub_resource type="CircleShape2D" id=2]
radius = 103.805

[sub_resource type="CircleShape2D" id=3]
radius = 45.2865

[sub_resource type="Animation" id=4]
resource_name = "Attack"

[sub_resource type="Animation" id=5]
resource_name = "Die"
length = 0.2

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.2
loop = true

[sub_resource type="Animation" id=7]
length = 0.4
step = 0.05

[sub_resource type="Animation" id=8]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.25, 0.3, 0.35, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7 ]
}

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( -20, 0, 20, 0, 20, 20, -20, 20 )

[node name="EnemyTemplate" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -10.041
margin_top = -16.607
margin_right = -10.041
margin_bottom = -16.607
rect_scale = Vector2( 0.2, 0.2 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Shadow" type="Sprite" parent="Sprites"]
position = Vector2( 0, 46 )
scale = Vector2( 2.96966, 0.700614 )
texture = ExtResource( 2 )

[node name="BodySprite" type="Sprite" parent="Sprites"]
light_mask = 2
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Wzrok" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wzrok"]
position = Vector2( 0, 3.375 )
shape = SubResource( 2 )

[node name="Atak" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atak"]
position = Vector2( 0, 2.569 )
shape = SubResource( 3 )

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Die = SubResource( 5 )
anims/Hurt = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 9 )

[connection signal="body_entered" from="Wzrok" to="." method="_on_Wzrok_body_entered"]
[connection signal="body_exited" from="Wzrok" to="." method="_on_Wzrok_body_exited"]
[connection signal="body_entered" from="Atak" to="." method="_on_Atak_body_entered"]
[connection signal="body_exited" from="Atak" to="." method="_on_Atak_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
